--- a/ss1/btth.html
+++ b/ss1/btth.html
@@ -78,7 +78,7 @@
         } else {
             returnStatus = `Quá hạn ${lateDays} ngày`;
             fine = 200000;
-            warning = "⚠️ TÀI KHOẢN BỊ KHÓA";
+            warning = " TÀI KHOẢN BỊ KHÓA";
         }
 
         console.log(`
